--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
----
-layout: home
-classes: wide
-author_profile: true
-title: "Arto Kaitosaari"
-header:
-  image: "images/frontpage_banner.jpg"
----
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>artokai.net</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f8f8f8;
+            font-family: Arial, sans-serif;
+        }
+        h1 {
+            font-size: 10vw;
+            font-weight: bold;
+            margin: 0;
+        }
+        p {
+            font-size: 2vw;
+            color: gray;
+        }
+    </style>
+</head>
+<body>
+    <h1>artokai.net</h1>
+    <p>Home of Arto Kaitosaari</p>    
+</body>
+</html>
